Integrate mounted horse navigation
Squash-merge equine-navigation into main.

Adds the corner-cruise horse route planner/controller, mounted collision and cruise certifiers, direct cruise pulling, mounted tuning profiles, horse physics/playtest tooling, and the v1 locked horse acceptance manifest.

Validation before merge: full Gradle test suite, Fabric build, and scripts/playtest suite scenarios/playtest/horse_locked.txt all passed. horse_thisway_500_frontier remains a standalone macro-gated frontier case, not a v1 gate.